// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageCropper /> matches with empty snapshot 1`] = `
<div
  className="sc-bZQynM bqJTVP k-UploadAndCropper"
>
  <label
    className="sc-bdVaJa cioPrE k-Label k-u-margin-bottom-singleHalf k-Label--normal"
    htmlFor="cropper"
    onClick={[Function]}
  >
    Lorem ipsum…
  </label>
  <div
    className="sc-ifAKCX jYUOXE k-BasicUploader k-u-margin-top-singleHalf k-u-margin-bottom-single k-BasicUploader--ready"
  >
    <input
      accept=".jpg,.jpeg,.gif,.png"
      disabled={false}
      id="cropper"
      onChange={[Function]}
      type="file"
    />
    <button
      className="sc-htpNat eINrlC k-Button k-BasicUploader__button k-Button--regular k-Button--hydrogen k-Button--andromeda k-Button--fit-min-width k-Button--mobile-fit-none k-Button--fit-fluid"
      htmlFor="cropper"
      style={
        Object {
          "--Button-border-radius": 0,
        }
      }
      type="button"
    >
      <svg
        aria-hidden={true}
        className="k-BasicUploader__button__uploadIcon k-u-margin-right-singleHalf"
        fill="#fff"
        height="13"
        viewBox="0 0 12 13"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <path
          d="M7 4.207v4H5v-4L3.172 6 1.757 4.62 6 0 10.243 4.62 8.828 6 7 4.207zM0 8h2v5H0zM10 8h2v5h-2zM0 11h12v2H0z"
        />
      </svg>
      <span>
        Choose a file…
      </span>
    </button>
  </div>
  <p
    className="sc-bwzfXH ggISLb k-Paragraph k-u-margin-top-single k-Paragraph--tertiary k-Paragraph--noMargin"
  >
    Lorem ipsum…
  </p>
  <div
    aria-live="polite"
    className="k-Cropper__wrapper k-u-margin-top-double"
  />
</div>
`;

exports[`<ImageCropper /> matches with snapshot with imageSrc 1`] = `
<div
  className="sc-bZQynM bqJTVP k-UploadAndCropper"
>
  <label
    className="sc-bdVaJa cioPrE k-Label k-u-margin-bottom-singleHalf k-Label--normal"
    htmlFor="cropper"
    onClick={[Function]}
  >
    Lorem ipsum…
  </label>
  <div
    className="sc-ifAKCX jYUOXE k-BasicUploader k-u-margin-top-singleHalf k-u-margin-bottom-single k-BasicUploader--ready"
  >
    <input
      accept=".jpg,.jpeg,.gif,.png"
      disabled={false}
      id="cropper"
      onChange={[Function]}
      type="file"
    />
    <button
      className="sc-htpNat eINrlC k-Button k-BasicUploader__button k-Button--regular k-Button--hydrogen k-Button--orion k-Button--fit-min-width k-Button--mobile-fit-none k-Button--fit-fluid"
      htmlFor="cropper"
      style={
        Object {
          "--Button-border-radius": 0,
        }
      }
      type="button"
    >
      <svg
        aria-hidden={true}
        className="k-BasicUploader__button__uploadIcon k-u-margin-right-singleHalf"
        fill="#fff"
        height="13"
        viewBox="0 0 12 13"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <path
          d="M7 4.207v4H5v-4L3.172 6 1.757 4.62 6 0 10.243 4.62 8.828 6 7 4.207zM0 8h2v5H0zM10 8h2v5h-2zM0 11h12v2H0z"
        />
      </svg>
      <span>
        Choose a file…
      </span>
    </button>
  </div>
  <p
    className="sc-bwzfXH ggISLb k-Paragraph k-u-margin-top-single k-Paragraph--tertiary k-Paragraph--noMargin"
  >
    Lorem ipsum…
  </p>
  <div
    aria-live="polite"
    className="k-Cropper__wrapper k-u-margin-top-double"
  >
    <div
      className="k-Cropper__wrapper__cropper"
    >
      <div
        className="k-Cropper"
        style={
          Object {
            "height": 0,
            "width": 0,
          }
        }
      >
        <img
          alt="picture"
          src="/kitten.jpg"
          style={
            Object {
              "maxWidth": "100%",
              "opacity": 0,
            }
          }
        />
      </div>
    </div>
    <div
      className="k-Cropper__wrapper__slider"
    >
      <p
        className="sc-bwzfXH ggISLb k-Paragraph k-u-margin-bottom-singleHalf k-Paragraph--tertiary k-Paragraph--noMargin"
      >
        Move the image…
      </p>
      <label
        className="sc-bdVaJa cioPrE k-Label k-u-margin-top-singleHalf k-u-margin-bottom-single k-Label--micro"
        htmlFor="zoomSlider"
        onClick={[Function]}
      >
        Zoom…
      </label>
      <div
        className="sc-EHOje kqHbFs k-RangeSlider"
        style={
          Object {
            "--range-input-ratio": 0,
          }
        }
      >
        <input
          className="k-u-margin-top-single"
          disabled={false}
          id="zoomSlider"
          max={100}
          min={0}
          name="zoom"
          onChange={[Function]}
          step="any"
          type="range"
        />
      </div>
    </div>
  </div>
</div>
`;
